change class to apply CSS

--- a/fixedHeader.html
+++ b/fixedHeader.html
@@ -20,11 +20,10 @@
 </div>
 </body>
 <style>
-    .main {
+    .navbar {
         position: fixed;
         top: 0;
         width: 100%;
-        color: crimson;
     }
 </style>
 </html>
